<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">FloatApp</string>
	<string name="calculator_app_name">Calculator</string>
    <string name="error">Error</string>
    <string name="digit0">0</string>
    <string name="digit1">1</string>
    <string name="digit2">2</string>
    <string name="digit3">3</string>
    <string name="digit4">4</string>
    <string name="digit5">5</string>
    <string name="digit6">6</string>
    <string name="digit7">7</string>
    <string name="digit8">8</string>
    <string name="digit9">9</string>
    <string name="del">DELETE</string>
    <string name="clear">CLR</string>
    <string translatable="false" name="div">\u00f7</string>
    <string translatable="false" name="mul">\u00d7</string>
    <string translatable="false" name="plus">+</string>
    <string translatable="false" name="minus">\u2212</string>
    <string translatable="false" name="dot">.</string>
    <string translatable="false" name="equal">=</string>
    <string name="sin">sin</string>
    <string translate="false" name="sin_mathematical_value">sin</string>
    <string name="cos">cos</string>
    <string translate="false" name="cos_mathematical_value">cos</string>
    <string name="tan">tan</string>
    <string translate="false" name="tan_mathematical_value">tan</string>
    <string translatable="false" name="pi">\u03c0</string>
    <string name="e">e</string>
    <string translate="false" name="e_mathematical_value">e</string>
    <string name="ln">ln</string>
    <string translate="false" name="ln_mathematical_value">ln</string>
    <string name="lg">log</string>
    <string translate="false" name="lg_mathematical_value">lg</string>
    <string name="leftParen">(</string>
    <string name="rightParen">)</string>
    <string translatable="false" name="sqrt">\u221a</string>
    <string translatable="false" name="power">^</string>
    <string translatable="false" name="factorial">!</string>
    <string name="basic">Basic panel</string>
    <string name="advanced">Advanced panel</string>
    <string name="clear_history">Clear history</string>
    <string name="text_copied_toast">Text copied.</string>
    <string name="leftParenDesc">left parenthesis</string>
    <string name="rightParenDesc">right parenthesis</string>
    <string name="factorialDesc">factorial</string>
    <string name="lnDesc">natural logarithm</string>
    <string name="lgDesc">logarithm</string>
    <string name="sqrtDesc">square root</string>
    <string name="divDesc">divide</string>
    <string name="mulDesc">multiply</string>
    <string name="plusDesc">plus</string>
    <string name="minusDesc">minus</string>
    <string name="dotDesc">point</string>
    <string name="powerDesc">power</string>
    <string name="delDesc">delete</string>
    <string name="clearDesc">clear</string>
    <string name="tanDesc">tangent</string>
    <string name="sinDesc">sine</string>
    <string name="cosDesc">cosine</string>
    <string name="eDesc">Euler\'s number</string>
    <string name="piDesc">pi</string>
    <string name="equalDesc">equals</string>
	<string name="video_app_name">"Video"</string>
    <string-array name="operators" translatable="false">
        <item>(</item>
        <item>)</item>
        <item>!</item>
        <item>ln</item>
        <item>log</item>
        <item>\u221a</item>
        <item>\u00f7</item>
        <item>\u00d7</item>
        <item>+</item>
        <item>\u2212</item>
        <item>.</item>
        <item>^</item>
        <item>tan</item>
        <item>sin</item>
        <item>cos</item>
        <item>\u03c0</item>
        <item>=</item>
    </string-array>
    <string-array name="operatorDescs">
        
        <item>left parenthesis</item>
        
        <item>right parenthesis</item>
        
        <item>factorial</item>
        
        <item>natural logarithm</item>
        
        <item>logarithm</item>
        
        <item>square root</item>
        
        <item>divided by</item>
        
        <item>multiplied by</item>
        
        <item>plus</item>
        
        <item>minus</item>
        
        <item>&#160;point&#160;</item>
        
        <item>power</item>
        
        <item>tangent</item>
        
        <item>sine</item>
        
        <item>cosine</item>
        
        <item>pi</item>
        
        <item>equals</item>
    </string-array>
	<string name="video_duration">"<xliff:g id="current_hours">%02d</xliff:g>:<xliff:g id="current_minutes">%02d</xliff:g>:<xliff:g id="current_seconds">%02d</xliff:g> / <xliff:g id="duration_hours">%02d</xliff:g>:<xliff:g id="duration_minutes">%02d</xliff:g>:<xliff:g id="duration_seconds">%02d</xliff:g>"</string>
	<string name="video_list_empty">"No videos."</string>
	<string name="scanning">"Scanning SD card..."</string>
	<string name="sdcard_missing_message">"Your phone does not have an SD card inserted."</string>
    <string name="sound_recorder_app_name">Recorder</string>
    <string name="record_your_message">Record your message</string>
    <string name="message_recorded">Message recorded</string>
    <string name="review_message">Review message</string>
    <string name="recording">Recording</string>
    <string name="recording_stopped">Recording stopped</string>
    <string name="storage_is_full">Storage is full</string>
    <string name="max_length_reached">Maximum length reached</string>
    <string name="insert_sd_card" product="default">Insert an SD card</string>
    <string name="min_available"><xliff:g id="minutes">%d</xliff:g> min available</string>
    <string name="sec_available"><xliff:g id="seconds">%d</xliff:g>s available</string>
    <string name="accept">Done</string>
    <string name="discard">Discard</string>
    <string name="button_ok">OK</string>
    <string name="timer_format" translatable="false"><xliff:g id="format">%02d:%02d</xliff:g></string>
    <string name="audio_db_title_format"><xliff:g id="format">yyyy-MM-dd HH:mm:ss</xliff:g></string>
    <string name="audio_db_artist_name">Your recordings</string>
    <string name="audio_db_album_name">Audio recordings</string>
    <string name="audio_db_playlist_name">My recordings</string>
    <string name="error_sdcard_access" product="default">Can\'t access SD card.</string>
    <string name="error_app_internal">Internal application error.</string>
    <string name="error_mediadb_new_record">Couldn\'t save recorded audio.</string>
    <string name="unknown_artist_name">Unknown artist</string>
    <string name="tell_save_record_success">Save succeeded</string>
    <string name="save_record">Save</string>
    <string name="cancel">Cancel</string>
    <string name="recording_format_high">High</string>
    <string name="recording_format_mid">Mid</string>
    <string name="recording_format_low">Low</string>
    <string name="three_mins_avail_total">"3 mins available total"</string>
    <string name="alert_delete_multiple">These items will be deleted</string>
    <string name="alert_delete_single">This item will be deleted</string>
    <string name="ok">OK</string>
    <string name="delete">Delete</string>
    <string name="deleting">Deleting</string>
    <string name="no_recording_file">(No recording file)</string>
    <string name="recording_file_list">Recording file list</string>
    <string name="recording_paused">Recording paused</string>
    <string name="voice_quality">Voice quality</string>
    <string name="recording_mode">Recording mode</string>
    <string name="recording_effect">Recording effects</string>
    <string name="select_voice_quality">Select voice quality</string>
    <string name="select_recording_mode">Select recording mode</string>
    <string name="select_recording_effect">Select recording effects</string>
    <string name="recording_mode_nomal">Normal</string>
    <string name="time_available"><xliff:g id="minutes">%d</xliff:g> mins <xliff:g id="seconds">%d</xliff:g>s available</string>
    <string name="recording_mode_meeting">Meeting</string>
    <string name="recording_mode_lecture">Lecture</string>
    <string name="sd_unmounted">SD card is unmounted.</string>
    <string name="storage_low">Your default storage is running out of space. Stop recording or delete items from SD Card.</string>
    <string name="storage_full">Default storage is full.</string>
    <string name="sd_no">Please insert an SD card.</string>
    <string name="recording_fail">Failed in recording</string>
    <string name="recorder_occupied">Recorder is occupied by other application.</string>
    <string name="playing_fail">Failed in playing</string>
    <string name="player_occupied">Player is occupied by other application.</string>
    <string name="recording_doc_deleted">Recording document has been deleted.</string>
    <string name="saving_fail">Failed in saving</string>
    <string name="deleting_fail">Failed in deleting</string>
    <string name="accessing_db_fail">Failed in accessing data base.</string>
    <string name="recording_effect_AGC">Auto gain control</string>
    <string name="recording_effect_AEC">Echo cancellation</string>
    <string name="recording_effect_NS">Noise suppression</string>
    <string name="recording_format_standard">Standard</string>
    <string name="not_available">Currently not available</string>
	<string name="music_title">Music</string>
	<string name="music_no_lrc">The lyrics is not found, please download</string>
	<string name="music_error">Can not play this song</string>
	<string name="music_list_empty">"No Music."</string>
</resources>