<?xml version="1.0" encoding="utf-8"?>

<!--
/*
 * Copyright (C) 2008, The Android Open Source Project
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
			  android:orientation="vertical"
			  android:background="@drawable/music_background" 
			  android:paddingLeft="3dp"
			  android:paddingRight="3dp"
			  android:paddingTop="3dp"
			  android:paddingBottom="3dp"
              >
			  
	<RelativeLayout
		android:id="@+id/title_layout"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_alignParentTop="true"
		android:layout_weight="6"
		>
		<Button
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:background="@drawable/float_menu"
			android:id="@+id/list_button"
			android:layout_alignParentLeft="true"
			android:layout_marginLeft="5dp"
			android:layout_marginTop="5dp"
			/>


			
		<Button
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:background="@drawable/float_minimize"
			android:id="@+id/minimize_button"
			android:layout_alignParentRight="true"
			android:layout_marginTop="5dp"
			android:layout_marginRight="5dp"
			/>
			
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/video_app_name"
			android:gravity="center"
			android:layout_toRightOf="@id/list_button"
			android:layout_toLeftOf="@id/minimize_button"
			android:layout_marginTop="5dp"
			android:textColor="#ffffff"
			android:textSize="16dp"
			android:id="@+id/title"
			/>
			
	</RelativeLayout>		
	
	<FrameLayout	
		android:id="@+id/float_fayout"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_weight="1"
		android:background="@drawable/music_list_background"
		android:layout_below="@id/title_layout"
		android:paddingLeft="1dp"
		android:paddingRight="1dp"
		android:paddingTop="1dp"
		android:paddingBottom="1dp"
		>
		
		<SurfaceView
			android:id="@+id/video_play_screen"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			
			 />
			 
		<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:id="@+id/video_control"
			>
			
			<TextView
				android:id="@+id/title_text"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:textSize="10sp"
				android:visibility="gone"/>

				
			<Button
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:background="@drawable/video_play"
				android:id="@+id/play_button"
				android:layout_centerInParent="true"
				android:visibility="gone"
				/>
				
			<Button
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:background="@drawable/video_pause"
				android:id="@+id/pause_button"
				android:layout_centerInParent="true"
				android:visibility="gone"
				
				/>	

			<Button
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:background="@drawable/video_list"
				android:id="@+id/list_button"
				android:layout_above="@id/play_button"
				android:layout_centerHorizontal="true"
				android:layout_marginBottom="@dimen/video_margin_all_around"
				android:visibility="gone"
				/>

			<Button
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:background="@drawable/video_next"
				android:id="@+id/next_button"
				android:layout_below="@id/play_button"
				android:layout_centerHorizontal="true"
				android:layout_marginTop="@dimen/video_margin_all_around"
				android:visibility="gone"
				/>

			<Button
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:background="@drawable/video_fast_backward"
				android:id="@+id/fast_backward_button"
				android:layout_toLeftOf="@id/play_button"
				android:layout_centerVertical="true"
				android:layout_marginRight="@dimen/video_margin_all_around"
				android:visibility="gone"
				/>

			<Button
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:background="@drawable/video_fast_forward"
				android:id="@+id/fast_forward_button"
				android:layout_toRightOf="@id/play_button"
				android:layout_centerVertical="true"
				android:layout_marginLeft="@dimen/video_margin_all_around"
				android:visibility="gone"
				/>
				
				
			<TextView
				android:id="@+id/duration_text"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textSize="10sp"
				android:textColor="#b0f0f0f0"
				android:layout_alignParentBottom="true"
				android:layout_alignParentLeft="true"
				/>
				
		</RelativeLayout>
		
		<ListView
			android:id="@+id/list"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:background="@drawable/music_list_background"
			android:cacheColorHint="#00000000"
			/>
		
		<TextView
			android:id="@+id/empty"
			android:layout_width="match_parent" 
			android:layout_height="match_parent"
			android:layout_centerInParent="true"
			android:paddingBottom="30dip"
			android:gravity ="center"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:text="@string/video_list_empty"
			android:visibility="gone"
			/>
		
		<LinearLayout
			android:id="@+id/no_sdcard"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:gravity="center"
			android:orientation="vertical"
			android:visibility="gone" 
			>
			 <ImageView
				android:id="@+id/sd_icon"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center_horizontal"
				android:background="@drawable/ic_mp_sd_card"
				/>
			 <TextView
				android:id="@+id/sd_message"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center_horizontal"
				android:padding="8dip"
				android:text="@string/sdcard_missing_message"
				android:textAppearance="?android:attr/textAppearanceMedium"
				/>
		</LinearLayout>		
		
	</FrameLayout>


</LinearLayout>
